infrastructure/terraform/modules/pdf_reactor.1.0.0/resources.tf
resource "aws_network_interface" "ec2" {
  subnet_id = var.subnet_id

  depends_on = [
    aws_security_group.ec2_instance_security_group
  ]

  tags            = var.tags
  security_groups = [aws_security_group.ec2_instance_security_group.id]
}

resource "aws_instance" "ec2" {
  #checkov:skip=CKV_AWS_126:Ensure that detailed monitoring is enabled for EC2 instances
  #checkov:skip=CKV_AWS_8:Ensure all data stored in the Launch configuration or instance Elastic Blocks Store is securely encrypted
  lifecycle {
    ignore_changes = [
      ebs_optimized
    ]
  }
  ebs_optimized        = true
  ami                  = var.ami_id
  instance_type        = var.instance_type
  iam_instance_profile = "oit_infra_d_ssm_and_cloudwatch_instanceprofile"
metadata_options {
    http_endpoint = "enabled"
    http_tokens = "required"
  }
  network_interface {
    network_interface_id = aws_network_interface.ec2.id
    device_index         = 0
  }

  user_data = <<EOF
#!/bin/bash
EOF

  tags = merge(var.tags, { Name = var.instance_name })
}
